data/all_generated_tests/raw_wast_tests/call_InvalidorInconsistentControlFlowGraph_3552.wast
;; 1. **Test for Out-of-Bounds Function Index**:    - **Description**: Invoke a function with an index that exceeds the number of defined functions in the module.    - **Constraint Checked**: Validity of `funcidx` within module context.    - **CFG Relevance**: Check implementation's ability to detect out-of-bounds access which can result in incorrect control flow handling.

(assert_invalid
  (module
    (func $f0 (call 2))
    (func $f1)
  )
  "unknown function"
)